--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
   "resolutions": {
     "@types/node": "15.3.0",
     "esbuild-loader/esbuild": "0.14.7",
-    "react-dnd": "14.0.2"
+    "react-dnd": "14.0.2",
+    "@mcap/core": "portal:/Users/roman/dev/github.com/foxglove/mcap/typescript/core"
   },
   "devDependencies": {
     "@actions/core": "1.6.0",
